<resources>
    <string name="app_name">Jabber</string>
    <string name="action_delete">Delete</string>
    <string name="entry">Journal Entry</string>
    <string name="department">Department</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="geo">Location</string>
    <string name="mood">Mood Rating</string>
    <string name="date">Date</string>
    <string name="quantity">Quantity</string>
    <string name="action_delete_all">Delete All</string>
    <string name="confirm_sure">Are you sure you want to delete all data?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="IsSurgeon">Is Surgeon: </string>
    <string name="delete">Are you sure you want to delete this</string>
    <string name="required">Required Field</string>
</resources>
